fix display scrollbar

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -20,7 +20,12 @@ $columns: 8;
   flex-direction: column;
   align-items: start;
   overflow-y: auto;
+  overflow-x: hidden;
   border-right: 1px solid black;
+  &::-webkit-scrollbar {
+    display: none;
+  }
+  scrollbar-width: none;
 }
 
 .row {
@@ -83,7 +88,6 @@ $columns: 8;
 }
 
 .buttons {
-  grid-row: 1/2;
   grid-column: 1/2;
   border-right: 1px solid black;
 }
